[tool.poetry]
name = "controladoria"
version = "0.1.0"
description = "Dashboard de Linhagem Financeira"
authors = ["Seu Nome <seuemail@exemplo.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
dash = ">=2.15.0"
dash-cytoscape = ">=1.0.1"
gunicorn = ">=21.2.0"
flask = ">=3.0.0"
